syntax = "proto3";
package game_data;

service Character {
    rpc Create (CreateCharacterRequest) returns (CreateCharacterReply);
}

message CreateCharacterRequest {
   string name = 1;
   oneof Player {
    int64 player_id = 2;
    string player_username = 3;
   }
   oneof HomeWorld {
    int64 home_world_id = 4;
    string home_world_name = 5;
   }
}

message CreateCharacterReply {
    string message = 1;
}
